# HeartDiseaseClassifier_CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: etl.h
notebooks/: DataCleaning.ipynb  EDA.ipynb
scripts/: datacleaning.py
src/: etl.cpp
